# z3rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  PARITY.md  PORTING.md  README.md  ROADMAP.md  scratchpad_t.smt2  z3test
.github/workflows/: ci.yml  fuzz.yml  release-binaries.yml  release-plz.yml
docs/: bignum-crate-spec.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dimacs_parse.rs  smt2_run.rs
include/: z3rs.h
scripts/: cluster_decline.py  diff_benchmarks.py  z3test_diff.py
src/: ffi.rs  lib.rs  main.rs
src/api/: build.rs  mod.rs
src/ast/: arith.rs  array.rs  basic.rs  bv.rs  manager.rs  mod.rs  node.rs  parameter.rs  pp.rs  query.rs  translation.rs
src/cmd_context/: mod.rs  smt2.rs
src/math/: interval.rs  mod.rs  polynomial.rs  resultant.rs  upoly.rs
src/model/: mod.rs
src/muz/: datalog.rs  mod.rs
src/nlsat/: cad.rs  elim.rs  icp.rs  mod.rs  nla.rs  realclosure.rs  univariate.rs
src/opt/: mod.rs
src/params/: mod.rs
src/parsers/: mod.rs
src/qe/: mod.rs
src/rewriter/: arith_rewriter.rs  array_rewriter.rs  bool_rewriter.rs  bv_rewriter.rs  mod.rs  nnf.rs  subst.rs  th_rewriter.rs
src/sat/: dimacs.rs  drat.rs  literal.rs  mod.rs  solver.rs  tseitin.rs
src/smt/: arith.rs  bv.rs  cooper.rs  euf.rs  mod.rs  solver.rs
src/solver/: mod.rs
src/tactic/: mod.rs
src/util/: bit_vector.rs  hash.rs  lbool.rs  mod.rs  params.rs  rlimit.rs  symbol.rs  sync.rs  zstring.rs
tests/: differential.rs  end_to_end.rs  ffi_smoke.c  no_external_deps.rs
