[package]
name = "z3rs"
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
description = "A pure-Rust, zero-dependency port of the Z3 theorem prover"
license = "MIT"
readme = "README.md"
repository = "https://github.com/KarpelesLab/z3rs"
keywords = ["smt", "solver", "z3", "theorem-prover", "satisfiability"]
categories = ["mathematics", "algorithms"]

# HARD CONSTRAINT: this crate depends on NO external library.
# `[dependencies]` must stay empty. std only. Do not add crates here.
[dependencies]

[dev-dependencies]

[lib]
name = "z3rs"
path = "src/lib.rs"

[[bin]]
name = "z3rs"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
